style.css
/* ... */
.bloc-lg {
  padding: 100px 50px;
}

.bloc-md {
  padding: 50px;
}

.bloc-sm {
  padding: 20px 50px;
}

.bg-center,
.bg-l-edge,
.bg-r-edge,
.bg-t-edge,
.bg-b-edge,
.bg-tl-edge,
.bg-bl-edge,
.bg-tr-edge,
.bg-br-edge,
.bg-repeat {
  -webkit-background-size: auto !important;
  -moz-background-size: auto !important;
  -o-background-size: auto !important;
  background-size: auto !important;
}

.bg-repeat {
  background: repeat;
}

.bg-t-edge {
  background: top no-repeat;
}

.bloc-bg-texture::before {
  content: "";
  background-size: 2px 2px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.texture-paper::before {
  background: url("img/texture-paper.png");
  background-size: 280px 280px;
}

.b-parallax {
  background-attachment: fixed;
}

.d-bloc {
  color: rgba(255, 255, 255, 0.7);
}

.d-bloc button:hover {
  color: rgba(255, 255, 255, 0.9);
}

.d-bloc .icon-round,
.d-bloc .icon-square,
.d-bloc .icon-rounded,
.d-bloc .icon-semi-rounded-a,
.d-bloc .icon-semi-rounded-b {
  border-color: rgba(255, 255, 255, 0.9);
}

.d-bloc .divider-h span {
  border-color: rgba(255, 255, 255, 0.2);
}

.d-bloc .a-btn,
.d-bloc .navbar a,
.d-bloc .navbar-brand
/* .d-bloc a .icon-sm,
.d-bloc a .icon-md,
.d-bloc a .icon-lg,
.d-bloc a .icon-xl
/* .d-bloc h1 a, */
/* .d-bloc h2 a,
.d-bloc h3 a,
.d-bloc h4 a,
.d-bloc h5 a,
.d-bloc h6 a */ {
  color: #000000;
}

.d-bloc .a-btn:hover,
.d-bloc .navbar a:hover,
.d-bloc .navbar-brand:hover,
.d-bloc a:hover .icon-sm,
.d-bloc a:hover .icon-md,
.d-bloc a:hover .icon-lg,
.d-bloc a:hover .icon-xl,
.d-bloc h1 a:hover,
.d-bloc h2 a:hover,
.d-bloc h3 a:hover,
.d-bloc h4 a:hover,
.d-bloc h5 a:hover,
.d-bloc h6 a:hover,
.d-bloc p a:hover {
  color: rgba(255, 255, 255, 1);
}

.d-bloc .navbar-toggle .icon-bar {
  background: rgba(255, 255, 255, 1);
}

.d-bloc .btn-wire,
.d-bloc .btn-wire:hover {
  color: rgba(255, 255, 255, 1);
  border-color: rgba(255, 255, 255, 1);
}

.d-bloc .panel {
  color: rgba(0, 0, 0, 0.5);
}

.d-bloc .panel button:hover {
  color: rgba(0, 0, 0, 0.7);
}

.d-bloc .panel icon {
  border-color: rgba(0, 0, 0, 0.7);
}

.d-bloc .panel .divider-h span {
  border-color: rgba(0, 0, 0, 0.1);
}

.d-bloc .panel .a-btn {
  color: rgba(0, 0, 0, 0.6);
}

.d-bloc .panel .a-btn:hover {
  color: rgba(0, 0, 0, 1);
}

.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover {
  color: rgba(0, 0, 0, 0.7);
  border-color: rgba(0, 0, 0, 0.3);
}

.d-bloc .panel,
.l-bloc {
  color: rgba(0, 0, 0, 0.5);
}

.d-bloc .panel button:hover,
.l-bloc button:hover {
  color: rgba(0, 0, 0, 0.7);
}

.l-bloc .icon-round,
.l-bloc .icon-square,
.l-bloc .icon-rounded,
.l-bloc .icon-semi-rounded-a,
.l-bloc .icon-semi-rounded-b {
  border-color: rgba(0, 0, 0, 0.7);
}

.d-bloc .panel .divider-h span,
.l-bloc .divider-h span {
  border-color: rgba(0, 0, 0, 0.1);
}

.d-bloc .panel .a-btn,
.l-bloc .a-btn,
.l-bloc .navbar a,
.l-bloc .navbar-brand,
.l-bloc a .icon-sm,
.l-bloc a .icon-md,
.l-bloc a .icon-lg,
.l-bloc a .icon-xl,
.l-bloc h1 a,
.l-bloc h2 a,
.l-bloc h3 a,
.l-bloc h4 a,
.l-bloc h5 a,
.l-bloc h6 a,
.l-bloc p a {
  color: rgba(0, 0, 0, 0.6);
}

.d-bloc .panel .a-btn:hover,
.l-bloc .a-btn:hover,
.l-bloc .navbar a:hover,
.l-bloc .navbar-brand:hover,
.l-bloc a:hover .icon-sm,
.l-bloc a:hover .icon-md,
.l-bloc a:hover .icon-lg,
.l-bloc a:hover .icon-xl,
.l-bloc h1 a:hover,
.l-bloc h2 a:hover,
.l-bloc h3 a:hover,
.l-bloc h4 a:hover,
.l-bloc h5 a:hover,
.l-bloc h6 a:hover,
.l-bloc p a:hover {
  color: rgba(0, 0, 0, 1);
}

.l-bloc .navbar-toggle .icon-bar {
  color: rgba(0, 0, 0, 0.6);
}

.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover,
.l-bloc .btn-wire,
.l-bloc .btn-wire:hover {
  color: rgba(0, 0, 0, 0.7);
  border-color: rgba(0, 0, 0, 0.3);
}

.voffset {
  margin-top: 30px;
}

.voffset-lg {
  margin-top: 80px;
}

.row-no-gutters {
  margin-right: 0;
  margin-left: 0;
}

.row.row-no-gutters > [class^="col-"],
.row.row-no-gutters > [class*=" col-"] {
  padding-right: 0;
  padding-left: 0;
}

#bloc-1-hero h1 {
  font-size: 32px;
}

.navbar {
  margin-bottom: 0;
  z-index: 1;
}

.navbar-brand {
  height: auto;
  padding: 3px 15px;
  font-size: 25px;
  font-weight: normal;
  font-weight: 600;
  line-height: 44px;
}

.navbar-brand img {
  max-height: 200px;
  margin: 0 5px 0 0;
  display: inline;
}

.navbar-brand img[src$="svg"] {
  min-width: 100px;
}

.nav-center .navbar-brand img {
  margin: 0;
}

.navbar .nav {
  padding-top: 2px;
  margin-right: -16px;
  float: right;
  z-index: 1;
}

.nav > li {
  float: left;
  margin-top: 4px;
  font-size: 16px;
}

.navbar-nav .open .dropdown-menu > li > a {
  text-align: inherit;
}

.nav > li a:hover,
.nav > li a:focus {
  background: transparent;
}

.navbar-toggle {
  margin: 10px 10px 0 0;
  border: 0px;
}

.navbar-toggle:hover {
  background: transparent !important;
}

.navbar-toggle .icon-bar {
  background-color: rgba(0, 0, 0, 0.5);
  width: 26px;
}

.nav-invert .navbar .nav {
  float: left;
}

.nav-invert .navbar-header,
.nav-invert .navbar-brand {
  float: right;
  position: relative;
  z-index: 2;
}

@media (min-width: 768px) {
  .site-navigation {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translate(0, -50%);
    -webkit-transform: translateY(-50%);
  }
  .nav > li .dropdown-menu a,
  .nav > li .dropdown-menu a:hover {
    color: #484848;
  }
  .nav-invert .site-navigation {
    left: 0;
    right: 0;
  }
  .nav-center {
    text-align: center;
  }
  .nav-center .navbar-header {
    width: 100%;
  }
  .nav-center .navbar-header,
  .nav-center .navbar-brand,
  .nav-center .nav > li {
    float: none;
    display: inline-block;
  }
  .nav-center .site-navigation {
    position: relative;
    width: 100%;
    right: 0;
    margin-right: 0px;
    margin-top: 20px;
  }
  .nav-center.mini-nav .navbar-toggle {
    float: none;
    margin: 10px auto 0;
  }
}

.nav > li > .dropdown a {
  background: none !important;
  display: block;
  padding: 14px 15px;
}

nav .caret {
  margin: 0 5px;
}
/* ... */

